cabal-version:   2.4
name:            safe-gen
version:         0
license:         BSD-3-Clause
build-type:      Simple
license-file:    LICENSE
author:          Jonas Carpay
maintainer:      Jonas Carpay <jonascarpay@gmail.com>
copyright:       2023 Jonas Carpay
tested-with:     GHC ==8.6.3 || ==8.8.3 || ==8.10.5
extra-doc-files:
  CHANGELOG.md
  README.md

common common-options
  build-depends:    base >=4.9 && <5
  default-language: Haskell2010
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-uni-patterns
    -Wincomplete-record-updates -Wredundant-constraints
    -fhide-source-paths -Wpartial-fields

library
  import:          common-options
  hs-source-dirs:  src
  exposed-modules: Test.QuickCheck.SafeGen
  build-depends:
    , containers
    , logict
    , mtl
    , QuickCheck
    , random
    , transformers

test-suite safe-gen-test
  import:         common-options
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Spec.hs
  build-depends:
    , hspec
    , HUnit
    , QuickCheck
    , safe-gen

  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
